modified logTransactionsSuspended in logTransactionsStatusChanged