@@ -3,6 +3,7 @@ package it.gov.pagopa.idpay.transactions.utils;
 import ch.qos.logback.classic.LoggerContext;
 import it.gov.pagopa.common.utils.AuditLogger;
 import it.gov.pagopa.common.utils.MemoryAppender;
+import it.gov.pagopa.idpay.transactions.dto.ChecksErrorDTO;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -40,13 +41,76 @@ class AuditUtilitiesTest {
     }
 
     @Test
-    void logTransactionsSuspended() {
-        auditUtilities.logTransactionsSuspended(3L, INITIATIVE_ID);
+    void logTransactionsStatusChanged_noChecks() {
+        ChecksErrorDTO dto = new ChecksErrorDTO();
+        dto.setCfError(false);
+        dto.setProductEligibilityError(false);
+        dto.setDisposalRaeeError(false);
+        dto.setPrice(false);
+        dto.setBonus(false);
+        dto.setSellerReference(false);
+        dto.setAccountingDocument(false);
 
-        String expectedLog = ("CEF:0|PagoPa|IDPAY|1.0|7|User interaction|2| event=Transactions dstip=%s msg=Suspended transactions" +
-                " cs1Label=initiativeId cs1=%s cs2Label=numberTransactions cs2=%s")
-                .formatted(AuditLogger.SRCIP, INITIATIVE_ID, 3L);
+        auditUtilities.logTransactionsStatusChanged("SUSPENDED", INITIATIVE_ID, "trx1,trx2", dto);
 
-        Assertions.assertEquals(expectedLog, memoryAppender.getLoggedEvents().get(0).getFormattedMessage());
+        String expectedLog = ("CEF:0|PagoPa|IDPAY|1.0|7|User interaction|2| event=Transactions dstip=%s msg=suspended transactions" +
+                " cs1Label=initiativeId cs1=%s cs2Label=status cs2=%s cs3Label=transactionIds cs3=%s cs4Label=trueChecksError cs4=%s")
+                .formatted(AuditLogger.SRCIP, INITIATIVE_ID, "SUSPENDED", "trx1,trx2", "");
+
+        Assertions.assertEquals(expectedLog, memoryAppender.getLoggedEvents().getFirst().getFormattedMessage());
     }
+
+    @Test
+    void logTransactionsStatusChanged_withSomeChecks() {
+        ChecksErrorDTO dto = new ChecksErrorDTO();
+        dto.setCfError(true);
+        dto.setProductEligibilityError(false);
+        dto.setDisposalRaeeError(true);
+        dto.setPrice(false);
+        dto.setBonus(true);
+        dto.setSellerReference(false);
+        dto.setAccountingDocument(false);
+
+        auditUtilities.logTransactionsStatusChanged("SUSPENDED", INITIATIVE_ID, "trx42", dto);
+
+        String expectedLog = ("CEF:0|PagoPa|IDPAY|1.0|7|User interaction|2| event=Transactions dstip=%s msg=suspended transactions" +
+                " cs1Label=initiativeId cs1=%s cs2Label=status cs2=%s cs3Label=transactionIds cs3=%s cs4Label=trueChecksError cs4=%s")
+                .formatted(AuditLogger.SRCIP, INITIATIVE_ID, "SUSPENDED", "trx42", "cfError,disposalRaeeError,bonus");
+
+        Assertions.assertEquals(expectedLog, memoryAppender.getLoggedEvents().getFirst().getFormattedMessage());
+    }
+
+    @Test
+    void logTransactionsStatusChanged_withAllChecks() {
+        ChecksErrorDTO dto = new ChecksErrorDTO();
+        dto.setCfError(true);
+        dto.setProductEligibilityError(true);
+        dto.setDisposalRaeeError(true);
+        dto.setPrice(true);
+        dto.setBonus(true);
+        dto.setSellerReference(true);
+        dto.setAccountingDocument(true);
+
+        auditUtilities.logTransactionsStatusChanged("SUSPENDED", INITIATIVE_ID, "trx42", dto);
+
+        String expectedLog = ("CEF:0|PagoPa|IDPAY|1.0|7|User interaction|2| event=Transactions dstip=%s msg=suspended transactions" +
+                " cs1Label=initiativeId cs1=%s cs2Label=status cs2=%s cs3Label=transactionIds cs3=%s cs4Label=trueChecksError cs4=%s")
+                .formatted(AuditLogger.SRCIP, INITIATIVE_ID, "SUSPENDED", "trx42", "cfError,productEligibilityError,disposalRaeeError,price,bonus,sellerReference,accountingDocument");
+
+        Assertions.assertEquals(expectedLog, memoryAppender.getLoggedEvents().getFirst().getFormattedMessage());
+    }
+
+    @Test
+    void logTransactionsStatusChanged_nullChecks() {
+        ChecksErrorDTO dto = null;
+
+        auditUtilities.logTransactionsStatusChanged("APPROVED", INITIATIVE_ID, "trx100,trx101", dto);
+
+        String expectedLog = ("CEF:0|PagoPa|IDPAY|1.0|7|User interaction|2| event=Transactions dstip=%s msg=approved transactions" +
+                " cs1Label=initiativeId cs1=%s cs2Label=status cs2=%s cs3Label=transactionIds cs3=%s cs4Label=trueChecksError cs4=%s")
+                .formatted(AuditLogger.SRCIP, INITIATIVE_ID, "APPROVED", "trx100,trx101", "");
+
+        Assertions.assertEquals(expectedLog, memoryAppender.getLoggedEvents().getFirst().getFormattedMessage());
+    }
+
 }
